# ServiceChat

./: README.md
backend/: .env.example  docker-compose.yml  frontend.py  main.py  pyproject.toml  test_chat.py
backend/api/: chat_api.py
backend/data/: birth-registration-form.json
backend/utils/: chat.py  config.py  prompt.py
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/components/: MarkdownRenderer.tsx  birth-registration-form.tsx  business-registration-form.tsx  change-address-form.tsx  chat-history.tsx  conversational-flow.tsx  conversational_chatbot.tsx  form-assistance.tsx  location-finder.tsx  navigation.tsx  new-arrival-form.tsx  roadmap-view.tsx  service-scenarios.tsx  storm-damage-form.tsx
frontend/lib/: api.tsx
frontend/styles/: MarkdownStyles.module.css
